--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,8 @@
         <site.plugin.version>3.7.1</site.plugin.version>
         <projectinfo.plugin.version>3.0.0</projectinfo.plugin.version>
 
+        <slf4j.version>1.7.30</slf4j.version>
+        <logback.version>1.2.3</logback.version>
         <junit.jupiter.version>5.4.2</junit.jupiter.version>
     </properties>
 
@@ -39,6 +41,24 @@
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>com.rqpa</groupId>
+                <artifactId>algo-commons</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-api</artifactId>
+                <version>${slf4j.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>ch.qos.logback</groupId>
+                <artifactId>logback-classic</artifactId>
+                <version>${logback.version}</version>
+            </dependency>
+
             <dependency>
                 <groupId>org.junit.jupiter</groupId>
                 <artifactId>junit-jupiter</artifactId>
